--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -142,11 +142,11 @@
                 </h1>
               </div>
 
-              <a href="#graphicdesignes" class="home-bnr-btn-1">
-                <i data-feather="chevron-right"></i> Designes
+              <a href="./webdesign.html" class="home-bnr-btn-1">
+                <i data-feather="chevron-right"></i> Web Design
               </a>
-              <a href="./contact.html" class="home-bnr-btn-2">
-                <i data-feather="phone-call"></i> Let's Talk
+              <a href="./webdevelopment.html" class="home-bnr-btn-2">
+                <i data-feather="chevron-right"></i> Web Development
               </a>
             </div>
           </div>
