--- a/webdesign.html
+++ b/webdesign.html
@@ -142,11 +142,11 @@
                 </h1>
               </div>
 
-              <a href="./resume/mukul-saini-resume.pdf" class="home-bnr-btn-1">
-                <i data-feather="chevron-right"></i> Resume
+              <a href="./webdevelopment.html" class="home-bnr-btn-1">
+                <i data-feather="chevron-right"></i> Web Development
               </a>
-              <a href="./contact.html" class="home-bnr-btn-2">
-                <i data-feather="phone-call"></i> Let's Talk
+              <a href="./graphicdesign.html" class="home-bnr-btn-2">
+                <i data-feather="chevron-right"></i> Graphic Design
               </a>
             </div>
           </div>
