--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -154,8 +154,7 @@
 
                             <a href="webdesign.html" class="home-bnr-btn-1"> <i data-feather="chevron-right"></i> Web
                                 Design </a>
-                            <a href="./contact.html" class="home-bnr-btn-2"> <i data-feather="phone-call"></i> Let's
-                                Talk </a>
+                            <a href="./graphicdesign.html" class="home-bnr-btn-2"> <i data-feather="chevron-right"></i> Graphic Design</a>
                         </div>
 
                     </div>
