--- a/index.html
+++ b/index.html
@@ -534,24 +534,42 @@
           </div>
           <div class="clearfix"></div>
           <div class="contact-form">
-            <form>
+            <form  method="POST" action="./send.php">
               <div class="form-box">
                 <i data-feather="user"></i>
-                <input type="text" placeholder="Name" required="" />
+                 <input
+                type="text"
+                name="name"
+                oninvalid="setCustomValidity('Please Enter Only Alphabets ')"
+                onchange="try{setCustomValidity('')}catch(e){}"
+                pattern="[a-z A-Z]+"
+                placeholder="Full Name"
+                required=""
+              />
               </div>
               <div class="form-box">
                 <i data-feather="phone"></i>
-                <input type="text" placeholder="Phone Number" required="" />
+                <input
+                oninvalid="setCustomValidity('Please Enter Only Number ')"
+                onchange="try{setCustomValidity('')}catch(e){}"
+                pattern="[0-9]+"
+                type="tel"
+                name="number"
+                maxlength="10"
+                minlength="10"
+                placeholder="Phone Number"
+                required=""
+              />
               </div>
               <div class="form-box">
                 <i data-feather="mail"></i>
-                <input type="email" placeholder="Email" required="" />
+                <input type="email" name="email" placeholder="Email" required />
               </div>
               <div class="form-text">
                 <i data-feather="message-square"></i>
-                <textarea placeholder="Message"></textarea>
+                <textarea placeholder="Message" name="comments"></textarea>
               </div>
-              <button><i data-feather="send"></i> Send</button>
+              <button name="sub" type="submit"><i data-feather="send"></i> Send</button>
             </form>
           </div>
         </div>
