--- a/about.html
+++ b/about.html
@@ -166,8 +166,8 @@
           <div class="about-cntnt">
             <h4>Tackling everything from Designing to Development...</h4>
             <p>
-              I'm a Mean Stack Developer based in Gurgaon.
-              I am currently graduating BCA. I have done Mean Stack Web Development course from Zenways.IO and
+              I'm a Web Designer based in Gurgaon.
+              I am currently graduating BCA. I have done 
               Graphic,
               Web
               Designing and Development (GWDD)
@@ -203,7 +203,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 col-sm-6 soft-width">
+        <!-- <div class="col-md-3 col-sm-6 soft-width">
           <div class="software">
             <img src="img/s9.png" />
             <p>Angular</p>
@@ -229,7 +229,7 @@
             <img src="img/s12.png" />
             <p>Mongo DB</p>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-3 col-sm-6 soft-width">
           <div class="software">
@@ -287,12 +287,12 @@
           </div>
         </div>
 
-        <div class="col-md-12 col-sm-12">
+        <!-- <div class="col-md-12 col-sm-12">
           <div class="education">
             <h6>Mean Stack Web Development</h6>
             <p>Zenways IO, Gurgaon</p>
           </div>
-        </div>
+        </div> -->
 
 
         <div class="col-md-12 col-sm-12">
