--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 
           <div class="about-cntnt">
             <p>
-              I'm a Mean Stack Developer based in Gurgaon.
-              I am currently graduating BCA. I have done Mean Stack Web Development course from Zenways.IO and
+              I'm a Web Designer based in Gurgaon.
+              I am currently graduating BCA. I have done 
               Graphic,
               Web
               Designing and Development (GWDD)
@@ -415,18 +415,18 @@
         </div>
 
         <div class="col-md-6 p-2 m-0 webport-box">
-          <a href="https://aipl-joy-gallery.rahejaassociates.com/">
+          <a href="https://bigassetsinfra.com/" target="_blank">
             <div class="web-img">
-              <img src="img/web-portfolio/web4.jpg" alt="" />
+              <img src="img/web-portfolio/web9.jpg" alt="" />
             </div>
-            <div class="webport-cntnt">
-              <p>AIPL</p>
+            <div class="webport-cntnt"> 
+              <p>BIGASSETS INFRA</p>
             </div>
           </a>
         </div>
 
         <div class="col-md-6 p-2 m-0 webport-box">
-          <a href="https://mycamellias.com/">
+          <a href="https://mycamellias.com/" target="_blank">
             <div class="web-img">
               <img src="img/web-portfolio/web7.jpg" alt="" />
             </div>
@@ -438,24 +438,24 @@
 
 
         <div class="col-md-6 p-2 m-0 webport-box">
-          <a href="https://www.unoreads.com/">
+          <a href="https://m3m-projects.in/city-of-dreams/" target="_blank">
             <div class="web-img">
-              <img src="img/web-portfolio/web8.jpg" alt="" />
+              <img src="img/web-portfolio/web10.jpg" alt="" />
             </div>
             <div class="webport-cntnt">
-              <p>UNO READS</p>
+              <p>M3M City Of Dreams</p>
             </div>
           </a>
         </div>
 
 
         <div class="col-md-6 p-2 m-0 webport-box">
-          <a href="https://cubedigitech.com/digitalmarketing/">
+          <a href="http://adxinfra.com/" target="_blank">
             <div class="web-img">
-              <img src="img/web-portfolio/web3.jpg" alt="" />
+              <img src="img/web-portfolio/web11.jpg" alt="" />
             </div>
             <div class="webport-cntnt">
-              <p>CUBE DIGITECH</p>
+              <p>ADX INFRA</p>
             </div>
           </a>
         </div>
@@ -466,7 +466,7 @@
   <!--Web Design End-->
 
   <!--Mean Stack-->
-  <section class="section abt-m-top right-space bg-gradient">
+  <!-- <section class="section abt-m-top right-space bg-gradient">
     <div class="container-fluid mt-res">
       <div class="row">
 
@@ -500,7 +500,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
   <!--Mean Stack End-->
 
   <!--Contact Us-->
