--- a/webdesign.html
+++ b/webdesign.html
@@ -158,41 +158,41 @@
 
   <!--Graphic Work-->
   <section>
-    <!-- <div class="container-fluid p-0 web-box">
+    <div class="container-fluid p-0 web-box">
       <div class="row m-0">
         <div class="col-md-6 p-0 m-0">
           <div class="web-img">
-            <a href="./websites/arabitia/index.php"><img src="img/web-portfolio/web1.jpg" alt="" /></a>
+            <a href="https://bigassetsinfra.com/" target="_blank"><img src="img/web-portfolio/web9.jpg" alt="" /></a>
           </div>
         </div>
 
         <div class="col-md-6 p-0 m-0">
           <div class="web-title">
-            <h4>Arabitia</h4>
+            <h4>BIGASSETS INFRA</h4>
             <p><b>Type :</b> Website</p>
             <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap, PHP.</p>
             <br />
-            <a href="./websites/arabitia/index.php">Preview</a>
+            <a href="https://bigassetsinfra.com/" target="_blank">Preview</a>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <div class="container-fluid p-0 web-box">
       <div class="row m-0">
         <div class="col-md-6 p-0 m-0">
           <div class="web-title">
-            <h4>The Camellias</h4>
+            <h4>M3M City Of Dreams</h4>
             <p><b>Type :</b> Landing Page</p>
-            <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap, PHP.</p>
+            <p><b>Softwares :</b> HTML, CSS, JS, Bootstrap, PHP.</p>
             <br />
-            <a href="https://mycamellias.com/">Preview</a>
+            <a href="https://m3m-projects.in/city-of-dreams/" target="_blank">Preview</a>
           </div>
         </div>
 
         <div class="col-md-6 p-0 m-0">
           <div class="web-img">
-            <a href="https://mycamellias.com/"><img src="img/web-portfolio/web7.jpg" alt="" /></a>
+            <a href="https://m3m-projects.in/city-of-dreams/" target="_blank"><img src="img/web-portfolio/web10.jpg" alt="" /></a>
           </div>
         </div>
       </div>
@@ -202,7 +202,47 @@
       <div class="row m-0">
         <div class="col-md-6 p-0 m-0">
           <div class="web-img">
-            <a href="https://cubedigitech.com/digitalmarketing/"><img src="img/web-portfolio/web3.jpg" alt="" /></a>
+            <a href="http://adxinfra.com/" target="_blank"><img src="img/web-portfolio/web11.jpg" alt="" /></a>
+          </div>
+        </div>
+
+        <div class="col-md-6 p-0 m-0">
+          <div class="web-title">
+            <h4>ADX INFRA</h4>
+            <p><b>Type :</b> Website</p>
+            <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap, PHP.</p>
+            <br />
+            <a href="http://adxinfra.com/" target="_blank">Preview</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid p-0 web-box">
+      <div class="row m-0">
+        <div class="col-md-6 p-0 m-0">
+          <div class="web-title">
+            <h4>The Camellias</h4>
+            <p><b>Type :</b> Landing Page</p>
+            <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap, PHP.</p>
+            <br />
+            <a href="https://mycamellias.com/" target="_blank">Preview</a>
+          </div>
+        </div>
+
+        <div class="col-md-6 p-0 m-0">
+          <div class="web-img">
+            <a href="https://mycamellias.com/" target="_blank"><img src="img/web-portfolio/web7.jpg" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid p-0 web-box">
+      <div class="row m-0">
+        <div class="col-md-6 p-0 m-0">
+          <div class="web-img">
+            <a href="https://cubedigitech.com/digitalmarketing/" target="_blank"><img src="img/web-portfolio/web3.jpg" alt="" /></a>
           </div>
         </div>
 
@@ -212,7 +252,7 @@
             <p><b>Type :</b> Landing Page</p>
             <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap, PHP.</p>
             <br />
-            <a href="https://cubedigitech.com/digitalmarketing/">Preview</a>
+            <a href="https://cubedigitech.com/digitalmarketing/" target="_blank">Preview</a>
           </div>
         </div>
       </div>
@@ -226,13 +266,13 @@
             <p><b>Type :</b> Landing Page</p>
             <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap, PHP.</p>
             <br />
-            <a href="https://aipl-joy-gallery.rahejaassociates.com/">Preview</a>
+            <a href="https://aipl-joy-gallery.rahejaassociates.com/" target="_blank">Preview</a>
           </div>
         </div>
 
         <div class="col-md-6 p-0 m-0">
           <div class="web-img">
-            <a href="https://aipl-joy-gallery.rahejaassociates.com/"><img src="img/web-portfolio/web4.jpg" alt="" /></a>
+            <a href="https://aipl-joy-gallery.rahejaassociates.com/" target="_blank"><img src="img/web-portfolio/web4.jpg" alt="" /></a>
           </div>
         </div>
       </div>
@@ -242,7 +282,7 @@
       <div class="row m-0">
         <div class="col-md-6 p-0 m-0">
           <div class="web-img">
-            <a href="https://www.unoreads.com/"><img src="img/web-portfolio/web8.jpg" alt="" /></a>
+            <a href="https://www.unoreads.com/" target="_blank"><img src="img/web-portfolio/web8.jpg" alt="" /></a>
           </div>
         </div>
         <div class="col-md-6 p-0 m-0">
@@ -251,7 +291,7 @@
             <p><b>Type :</b> Website</p>
             <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap, PHP.</p>
             <br />
-            <a href="https://www.unoreads.com/">Preview</a>
+            <a href="https://www.unoreads.com/" target="_blank">Preview</a>
           </div>
         </div>
       </div>
@@ -265,22 +305,22 @@
             <p><b>Type :</b> Website</p>
             <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap,PHP.</p>
             <br />
-            <a href="https://bimtecharch.com/">Preview</a>
+            <a href="https://bimtecharch.com/" target="_blank">Preview</a>
           </div>
         </div>
         <div class="col-md-6 p-0 m-0">
           <div class="web-img">
-            <a href="https://bimtecharch.com/"><img src="img/web-portfolio/web6.jpg" alt="" /></a>
+            <a href="https://bimtecharch.com/" target="_blank"><img src="img/web-portfolio/web6.jpg" alt="" /></a>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container-fluid p-0 web-box">
+    <!-- <div class="container-fluid p-0 web-box">
       <div class="row m-0">
         <div class="col-md-6 p-0 m-0">
           <div class="web-img">
-            <a href="./websites/cpavant/index.html"><img src="img/web-portfolio/web2.jpg" alt="" /></a>
+            <a href="./websites/cpavant/index.html" target="_blank"><img src="img/web-portfolio/web2.jpg" alt="" /></a>
           </div>
         </div>
 
@@ -290,12 +330,12 @@
             <p><b>Type :</b> Website</p>
             <p><b>Softwares :</b> HTML, CSS, JS, Jquery, Bootstrap.</p>
             <br />
-            <a href="./websites/cpavant/index.html">Preview</a>
+            <a href="./websites/cpavant/index.html" target="_blank">Preview</a>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--Graphic Work End-->
 
   <!--Contact Us-->
