--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -167,7 +167,7 @@
 
 
     <!--Mean Stack-->
-    <section class="section right-space bg-gradient ">
+    <!-- <section class="section right-space bg-gradient ">
         <div class="container-fluid  mt-res">
             <div class="row">
 
@@ -201,7 +201,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="section right-space bg-gradient-two ">
         <div class="container-fluid">
