--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
             <div class="banner-cntnt">
               <div class="hero">
                 <h1 class="hero__title js-hero-title"
-                  data-job-rotate="Mean Stack  Developer, Web Designer, Graphic Designer">
+                  data-job-rotate="Web Designer, Graphic Designer">
                   <span class="hero__label js-hero-label">
                     About Me
                   </span>
