--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div class="col-md-12 res-m-0">
             <div class="banner-cntnt">
               <div class="hero">
-                <h1 class="hero__title js-hero-title" data-job-rotate="I' M MUKUL, Mean Stack Developer">
+                <h1 class="hero__title js-hero-title" data-job-rotate="I' M MUKUL, Web Designer">
                   <span class="hero__label js-hero-label">
                     Hey
                   </span>
