--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -139,7 +139,7 @@
 
                             <div class="hero">
                                 <h1 class="hero__title js-hero-title"
-                                    data-job-rotate="Mean Stack Development, Angular,Node JS | Express JS, MongoDB">
+                                    data-job-rotate="Angular,Node JS | Express JS, MongoDB">
                                     <span class="hero__label js-hero-label">
                                         Web Development
                                     </span>
