--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
 
           <div class="about-cntnt">
             <p>
-              I'm a Web Designer based in Gurgaon.
-              I am currently graduating BCA. I have done 
+              I'm a Web Designer based in Gurgaon. I have done 
               Graphic,
               Web
               Designing and Development (GWDD)
