--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               Graphic,
               Web
               Designing and Development (GWDD)
-              course from Arena Animation, Gurgaon. I was introduced to coding in grade
+              course from Arena Animation, Gurgaon & MEAN Stack Development from Zenways.IO, Gurgaon. I was introduced to coding in grade
               11th, started coding and designing things for fun. I've always had a passion for technology. I love to
               develop and make things with some creativity and innovation.
             </p>
