--- a/about.html
+++ b/about.html
@@ -166,14 +166,7 @@
           <div class="about-cntnt">
             <h4>Tackling everything from Designing to Development...</h4>
             <p>
-              I'm a Web Designer based in Gurgaon.
-              I am currently graduating BCA. I have done 
-              Graphic,
-              Web
-              Designing and Development (GWDD)
-              course from Arena Animation, Gurgaon. I was introduced to coding in grade
-              11th, started coding and designing things for fun. I've always had a passion for technology. I love to
-              develop and make things with some creativity and innovation.
+             I'm a Web Designer based in Gurgaon. I have done Graphic, Web Designing and Development (GWDD) course from Arena Animation, Gurgaon & MEAN Stack Development from Zenways.IO, Gurgaon. I was introduced to coding in grade 11th, started coding and designing things for fun. I've always had a passion for technology. I love to develop and make things with some creativity and innovation.
             </p>
             <p class="abt-slogun border-none">
               <i><b>Awarded by 2nd prize for the best mobile website designing in
@@ -183,7 +176,7 @@
               I am most interested in Designing, Photography and Gaming. I
               craft interactive stories and engaging brand experiences with
               great care. I've worked as a UI/UX Designer and Web Designer at
-              Triwacko IT Solution Pvt Ltd for 6 months.
+              Triwacko IT Solution Pvt Ltd for 6 months and since last 2 years I am working with Firstdigit Solutions.
             </p>
             <br />
           </div>
