--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <p>
               I am most interested in Designing,Development and Gaming. I've
               worked as a UI/UX Designer at Triwacko IT
-              Solution Pvt Ltd for 6 months..
+              Solution Pvt Ltd for 6 months and since last 2 years I am working with Firstdigit Solutions.
             </p>
             <br />
             <a href="about.html" class="about-button">
