--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
           </div>
         </div>
 
-        <!-- <div class="col-md-3 col-sm-6 soft-width">
+        <div class="col-md-3 col-sm-6 soft-width">
           <div class="software">
             <img src="img/s9.png" />
             <p>Angular</p>
@@ -222,7 +222,7 @@
             <img src="img/s12.png" />
             <p>Mongo DB</p>
           </div>
-        </div> -->
+        </div>
 
         <div class="col-md-3 col-sm-6 soft-width">
           <div class="software">
