--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
   <!--Web Design End-->
 
   <!--Mean Stack-->
-  <!-- <section class="section abt-m-top right-space bg-gradient">
+  <section class="section abt-m-top right-space bg-gradient">
     <div class="container-fluid mt-res">
       <div class="row">
 
@@ -499,7 +499,7 @@
 
       </div>
     </div>
-  </section> -->
+  </section>
   <!--Mean Stack End-->
 
   <!--Contact Us-->
